# vigir_perception_msgs

./: .travis.yml  CMakeLists.txt  README.md  package.xml
action/: GetLocomotionTargetPose.action
include/vigir_perception_msgs/: filtered_scan_conversion.h
msg/: CompressedFilteredScanData.msg  DownSampledImageRequest.msg  EnvironmentRegionRequest.msg  FilteredLocalizedLaserScan.msg  LocalizedImage.msg  PointCloudTypeRegionRequest.msg  RaycastRequest.msg
srv/: GetPoseInFrame.srv  OctomapRegionRequest.srv  PointCloudRegionRequest.srv
test/: main.cpp
